<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/usernameText"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordText"
        android:textColor="#372c24" />


    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/login_btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dip"
        android:background="#333333"
        android:onClick="login"
        android:text="@string/loginButtonText"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/link_to_resetPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dip"
        android:layout_marginTop="40dip"
        android:clickable="true"
        android:gravity="center"
        android:onClick="registerLink"
        android:text="@string/registerTextLink"
        android:textColor="#99cc33" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffcc0615"/>
</LinearLayout>
