<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thoughtworks.android_espresso.RegisterActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Surname"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/reg_surname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/usernameText"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="5dip"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordText"
        android:textColor="#372c24" />


    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dip"
        android:background="#333333"
        android:onClick="register"
        android:text="@string/registerButtonText"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/link_to_resetPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dip"
        android:layout_marginTop="40dip"
        android:clickable="true"
        android:gravity="center"
        android:onClick="loginLink"
        android:text="@string/loginTextLink"
        android:textColor="#99cc33" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffcc0615" />

</LinearLayout>
